[package]
name = 'substrate-validator-set'
version = '1.1.0'
authors = ['Gautam Dhameja <quasijatt@outlook.com>']
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/gautamdhameja/substrate-validator-set'
resolver = "2"

[dependencies.polkadot-sdk]
git = "https://github.com/paritytech/polkadot-sdk"
tag = "polkadot-stable2409-2"
version = "0.7.0"
default-features = false
features = ["experimental", "runtime", "pallet-session"]

[dependencies.pallet-session]
version = "*"
default-features = false
features = ['historical']

[dependencies.scale-info]
default-features = false
features = ['derive', 'serde']
version = '2.11.5'

[dependencies.log]
default-features = false
version = '0.4.22'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.6.12'

[dev-dependencies.serde]
features = ['derive']
version = '1.0.215'

[features]
std = [
  'codec/std',
  'scale-info/std',
  'serde/std',
  'log/std',
  'polkadot-sdk/std',
  'pallet-session/std',
]
default = ['std']
runtime-benchmarks = ['polkadot-sdk/runtime-benchmarks']
try-runtime = ['polkadot-sdk/try-runtime']
