[package]
name = 'substrate-validator-set'
version = '1.1.0'
authors = ['Gautam Dhameja <quasijatt@outlook.com>']
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/gautamdhameja/substrate-validator-set'
resolver = "2"

[dependencies.frame-support]
version = "39.0.0"
default-features = false

[dependencies.frame-system]
version = "39.0.0"
default-features = false

[dependencies.pallet-session]
version = "39.0.0"
default-features = false
features = ['historical']

[dependencies.sp-staking]
version = "37.0.0"
default-features = false

[dependencies.scale-info]
default-features = false
features = ['derive', 'serde']
version = '2.11.6'

[dependencies.log]
default-features = false
version = '0.4.22'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.6.12'

[dev-dependencies.serde]
features = ['derive']
default-features = false
version = '1.0.217'

[features]
std = [
  'codec/std',
  'scale-info/std',
  'serde/std',
  'log/std',
  'frame-support/std',
  'pallet-session/std',
  'frame-system/std',
  'sp-staking/std',
]
default = ['std']
runtime-benchmarks = ['frame-support/runtime-benchmarks']
try-runtime = [
  'frame-system/try-runtime',
  'frame-support/try-runtime',
  'pallet-session/try-runtime',
]
